--- a/mobile/tsconfig.json
+++ b/mobile/tsconfig.json
@@ -13,5 +13,5 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-, "components/SafeScreen.jsx", "app/(tabs)/search.jsx"  ]
+, "components/SafeScreen.jsx", "app/(tabs)/search.jsx", "app/(tabs)/favourites.jsx"  ]
 }
